# hawksoft-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/hawksoft_mcp/: __init__.py  audit.py  client.py  exceptions.py  log_actions.py  models.py  server.py
tests/: test_audit.py  test_smoke.py
