[project]
name = "hawksoft-mcp"
version = "0.1.0"
description = "MCP server for HawkSoft Insurance Agency Management — read clients, policies, claims; write log notes, attachments, receipts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "sanjibani", email = "sanjibani@users.noreply.github.com" },
]
keywords = ["mcp", "model-context-protocol", "hawksoft", "insurance", "agency-management", "ai-agent", "claude"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
hawksoft-mcp = "hawksoft_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hawksoft_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/hawksoft_mcp/server.py" = "hawksoft_mcp/server.py"
"src/hawksoft_mcp/client.py" = "hawksoft_mcp/client.py"
"src/hawksoft_mcp/models.py" = "hawksoft_mcp/models.py"
"src/hawksoft_mcp/log_actions.py" = "hawksoft_mcp/log_actions.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"